# Obsidian-KDB

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  setup.sh
benchmark/: README.md
benchmark/guards/: task115-gate0-cohort-slug-collisions.json  task115-phase5-cohort-slug-collisions.json
benchmark/scores/: leaderboard-pass1.json  leaderboard-pass1.md  leaderboard-pass2.json  leaderboard-pass2.md  leaderboard.json  leaderboard.md
benchmark/sources/: 01-attention-is-all-you-need.md  01-attention-is-all-you-need.meta.yaml  02-why-momentum-really-works.md  02-why-momentum-really-works.meta.yaml  03-twelve-factor-app.md  03-twelve-factor-app.meta.yaml  04-research-debt.md  04-research-debt.meta.yaml  05-understanding-ownership.md  05-understanding-ownership.meta.yaml
common/: __init__.py  call_model.py  call_model_retry.py  llm_telemetry.py  measurement.py  model_pool.py  models.json  models_dropped.json  paths.py  run_context.py  source_io.py  types.py  version.py  wiki_io.py
common/config/: __init__.py
common/tests/: test_call_model.py  test_call_model_retry.py  test_config.py  test_json_escape_fix.py  test_json_tail_fix.py  test_layering_leaf.py  test_llm_telemetry.py  test_measurement.py  test_model_pool.py  test_paths.py  test_source_io.py  test_types.py  test_version.py  test_wiki_io.py
common/util/: __init__.py  json_escape_fix.py  json_tail_fix.py
compiler/: canonicalize.py  compiler.py  context_loader.py  page_writer.py  prompt_builder.py  repair.py  resp_summary.py  response_normalizer.py  response_recovery.py  summary_slug.py  validate_compile_result.py  validate_source_response.py
compiler/kpi/: graph.py  processing.py  report.py  score.py
compiler/prompts/: KDB-Compiler-System-Prompt.md
compiler/schemas/: compile_result.schema.json  compiled_source_response.schema.json
compiler/tests/: test_canonicalize_algorithm.py  test_canonicalize_ledger.py  test_coerce_slugs.py  test_compile_source.py  test_compiler.py  test_compiler_recovery.py  test_kpi_graph.py  test_kpi_processing.py  test_kpi_report.py  test_kpi_score.py  test_m2_first_compile.py  test_page_writer.py  test_parsed_summary_gate.py  test_prompt_builder.py  test_repair.py  test_resp_stats_writer.py  test_resp_summary_split.py  test_response_normalizer.py  test_response_recovery.py  test_summary_slug.py  test_t2_end_to_end_pass1_path.py  test_t2_mode_dispatch.py  test_validate_compile_result.py  test_validate_source_response.py  test_wikilink_parity.py
docs/: 2026-07-07-state-of-the-system.md  2026-07-17-project-review-kimi-k3.md  CODEBASE_OVERVIEW.md  JOURNEY.md  KDB-Compiler-System-Prompt-Gemini-3.1.md  KDB-Compiler-System-Prompt-Grok4.3.md  M2 upfront schema discussion - GPT5.4  M2_phase3_blueprint.md  New-GraphDB-Paradigm.md  RELEASES.md  ROADMAP.md  TASKS.md  bug-patch-applier-empty-plan.md  code-review-M0-codex.md  codex-brainstorm-prompt-2026-05-14-round2-roadmaps.md  codex-review-prompt-2026-05-13-v3.md  codex-review-prompt-2026-05-13.md  compile_result.md  example-prompt-ep1-china.md  external-review-panel.md  graphdb-kdb-extraction-roadmap.md  graphdb-kdb-producer-contract.md  last_scan.md  manifest-succession-arc.md  manifest.md  manifest.schema.md  nw9-context-list-t2-t3-redesign-hypothesis.md  ontology-blueprint-V1-review-codex.md  ontology-blueprint-V1-review-deepseek.md  ontology-blueprint-V1-review-gemini.md  ontology-blueprint-V1-review-qwen.md  ontology-blueprint-V1.md  orchestrate-real-run-1-to-2-tasklist.md  post-gap-recall-2026-04-30.md  round6-research-gpt.md  round6-research-grok.md  round6-research-opus.md  run-4-findings.md  run-journal-v2-consolidated-spec.md  session-handoff-2026-04-18.md  (+117 more)
docs/reference/: New-GraphDB-Paradigm.md  TODO.md  benchmark-cohort-procedure.md  compile_result.md  graph-nodes-edges-logic.md  graphdb-kdb-extraction-roadmap.md  graphdb-kdb-producer-contract.md  graphdb-tutorial.html  kdb-storage-architecture.md  last_scan.md  manifest-succession-arc.md  manifest.md  model-provider-api-calls.md  orchestration-workflow.html  task-graphdb-kdb-blueprint.md  test-run-procedure.md  wiki.md
docs/task95-pass1-review/: SYNTHESIS.md  pass1_responses_all.md  review-codex.md  review-deepseek.md  review-gemini.md  review-grok.md
docs/tutorial/: graphdb-tutorial.html  memory-workflow.md
graphdb_kdb/: __init__.py  __main__.py  analytics.py  cli.py  graphdb.py  ingestor.py  queries.py  rebuilder.py  schema.py  snapshot.py  types.py  verifier.py
ingestion/: kdb_scan.py
kdb_benchmark/: __init__.py  cli.py  models.json  paths.py  registry.py  runner.py  scorecard.py  scorer.py
kdb_compiler/: __init__.py  atomic_io.py  call_model.py  call_model_retry.py  canonicalize.py  compiler.py  config.py  context_loader.py  eval_replay.py  eval_writer.py  graph_context_loader.py  kdb_clean.py  kdb_compile.py  kdb_orchestrate.py  kdb_scan.py  manifest_update.py  manifest_writer.py  orchestrator_events.py  page_writer.py  patch_applier.py  paths.py  pipeline_registry.py  planner.py  prompt_builder.py  reconcile.py  repair.py  resp_stats_writer.py  response_normalizer.py  response_replay.py  run_context.py  run_journal.py  source_io.py  source_state_update.py  types.py  validate_compile_result.py  validate_compiled_source_response.py  validate_last_scan.py  validate_source_response.py
kdb_graph/: __init__.py  __main__.py  analytics.py  cli.py  graphdb.py  ingestor.py  intake.py  queries.py  rebuilder.py  schema.py  snapshot.py  testing.py  types.py  verifier.py
kdb_mcp/: __init__.py  adapters.py  config.py  models.py  server.py
knowledge_graph/: codebase_overview.md  generate_knowledge_graph.py
orchestrator/: emit_kpis.py  kdb_orchestrate.py  manifest_writer.py  orchestrator_events.py
scripts/: backfill_cleanup_journal.py  benchmark_regression.sh  cohort_slug_collision_guard.py  migrate_task64_supersession.py  migrate_task66_compiled_hash.py  sandbox-run.sh  verify_structured_output_parity.py
tools/: cleanup.py  kdb_graph_viewer-opus.py  kdb_graph_viewer.py  kdb_graph_viewer_template.html  replay.py
(+707 files in other folders)
