[project]
name = "obsidian-kdb"
version = "0.1.0"
description = "Karpathy-style LLM-compiled knowledge base for Obsidian vaults."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joseph" }]
dependencies = [
    "jsonschema>=4.17",
    "jinja2>=3.0",
    "requests>=2.31",
    "anthropic>=0.40",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "kuzu>=0.11",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
kdb-enrich            = "kdb_compiler.ingestion.kdb_enrich:main"
kdb-scan              = "kdb_compiler.kdb_scan:main"
kdb-validate-scan     = "kdb_compiler.validate_last_scan:main"
kdb-validate          = "kdb_compiler.validate_compile_result:main"
kdb-validate-response = "kdb_compiler.validate_compiled_source_response:main"
kdb-plan              = "kdb_compiler.planner:main"
kdb-compile-sources   = "kdb_compiler.compiler:main"
kdb-compile           = "kdb_compiler.kdb_compile:main"
kdb-clean             = "kdb_compiler.kdb_clean:main"
kdb-replay            = "kdb_compiler.response_replay:main"
kdb-benchmark         = "kdb_benchmark.cli:main"
graphdb-kdb           = "graphdb_kdb.cli:main"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kdb_compiler*", "kdb_benchmark*", "graphdb_kdb*"]
exclude = ["knowledge_graph*", "docs*", "tests*", "benchmark*"]

[tool.setuptools.package-data]
kdb_compiler  = ["schemas/*.json"]
kdb_benchmark = ["models.json"]

[tool.pytest.ini_options]
testpaths    = ["kdb_compiler/tests", "kdb_benchmark/tests", "graphdb_kdb/tests"]
python_files = ["test_*.py"]
addopts      = "-ra -q -m 'not bench'"
markers      = [
    "uses_real_graph_context: test manages its own GraphDB fixture (opts out of planner stub)",
    "bench: latency / runtime regression test — opt-in via `pytest -m bench`; not run by default",
    "live: live LLM integration test — requires API key in env; skipped by default in CI",
]
