[project]
name = "obsidian-kdb"
version = "0.1.0"
description = "Karpathy-style LLM-compiled knowledge base for Obsidian vaults."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joseph" }]
dependencies = [
    "jsonschema>=4.17",
    "jinja2>=3.0",
    "requests>=2.31",
    "anthropic>=0.40",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "kuzu>=0.11",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
kdb-enrich            = "ingestion.enrich.kdb_enrich:main"
kdb-scan              = "ingestion.kdb_scan:main"
kdb-validate          = "compiler.validate_compile_result:main"
kdb-validate-response = "compiler.validate_source_response:main"
kdb-clean             = "kdb_compiler.kdb_clean:main"
kdb-replay            = "kdb_compiler.response_replay:main"
kdb-benchmark         = "kdb_benchmark.cli:main"
kdb-orchestrate       = "orchestrator.kdb_orchestrate:main"
graphdb-kdb           = "kdb_graph.cli:main"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kdb_compiler*", "kdb_benchmark*", "kdb_graph*", "common*", "ingestion*", "compiler*", "orchestrator*", "tools*"]
exclude = ["knowledge_graph*", "docs*", "tests*", "benchmark*"]

[tool.setuptools.package-data]
kdb_compiler  = ["schemas/*.json"]
compiler      = ["schemas/*.json"]
kdb_benchmark = ["models.json"]
ingestion     = ["config/*.json", "config/*.yaml", "enrich/*.j2"]

[tool.pytest.ini_options]
testpaths    = ["kdb_compiler/tests", "kdb_benchmark/tests", "kdb_graph/tests", "tools/tests"]
python_files = ["test_*.py"]
addopts      = "-ra -q -m 'not bench'"
markers      = [
    "uses_real_graph_context: test manages its own GraphDB fixture (opts out of planner stub)",
    "bench: latency / runtime regression test — opt-in via `pytest -m bench`; not run by default",
    "live: live LLM integration test — requires API key in env; skipped by default in CI",
]
