[project]
name = "obsidian-kdb"
version = "0.5.7"
description = "Karpathy-style LLM-compiled knowledge base for Obsidian vaults."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joseph" }]
dependencies = [
    "jsonschema>=4.17",
    "jinja2>=3.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "kuzu>=0.11",
    "mcp>=1.12,<2",
    "networkx>=3.0",
    "python-louvain>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
kdb-enrich            = "ingestion.enrich.kdb_enrich:main"
kdb-scan              = "ingestion.kdb_scan:main"
kdb-validate          = "compiler.validate_compile_result:main"
kdb-validate-response = "compiler.validate_source_response:main"
kdb-clean             = "tools.cleanup:main"
kdb-replay            = "tools.replay:main"
kdb-benchmark         = "tools.benchmark.cli:main"
kdb-orchestrate       = "orchestrator.kdb_orchestrate:main"
kdb-mcp-server        = "kdb_mcp.server:main"
graphdb-kdb           = "kdb_graph.cli:main"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kdb_graph*", "kdb_mcp*", "common*", "ingestion*", "compiler*", "orchestrator*", "tools*"]
exclude = ["knowledge_graph*", "docs*", "tests*", "benchmark*", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
compiler      = ["schemas/*.json"]
tools         = ["diagnostics/*.json", "viewer/*.html"]
ingestion     = ["config/*.json", "config/*.yaml", "enrich/*.j2"]

[tool.pytest.ini_options]
testpaths    = ["common/tests", "ingestion/tests", "compiler/tests", "kdb_graph/tests", "kdb_mcp/tests", "orchestrator/tests", "tools/tests", "tools/benchmark/tests"]
python_files = ["test_*.py"]
addopts      = "-ra -q -m 'not bench'"
markers      = [
    "bench: latency / runtime regression test — opt-in via `pytest -m bench`; not run by default",
    "live: live LLM integration test — requires API key in env; skipped by default in CI",
    "anyio: async test driven by the anyio pytest plugin",
]
